--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <HEAD>
 </HEAD>
 <BODY>
+  <input id="poke-name" type="text">
+  <button id="my-button">Who's that pokemon</button>
+  <div id="poke-name"></div>
+  <img id="poke-img">
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js">
+    <script src="myScript"></script>
+   
 <H1> HELLO WORLD</H1>
 </BODY>
 </HTML>
