--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HEAD>
 </HEAD>
 <BODY>
-  <input id="poke-name" type="text">
+  <input id="poke-input" type="text">
   <button id="my-button">Who's that pokemon</button>
   <div id="poke-name"></div>
   <img id="poke-img">
